--- a/stage1.ipynb
+++ b/stage1.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "id": "4660186f",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 2,
    "id": "008ade53",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 4,
    "id": "d39ddb1b",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 5,
    "id": "e749c8d3",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 6,
    "id": "7dcbe377",
    "metadata": {},
    "outputs": [],
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 7,
    "id": "661f86e6",
    "metadata": {},
    "outputs": [],
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 8,
    "id": "494d3a96",
    "metadata": {},
    "outputs": [],
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 16,
    "id": "882e5f9e",
    "metadata": {},
    "outputs": [
@@ -147,64 +147,64 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1389</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2011-03-28 15:00:44 UTC</td>\n",
-       "      <td>2011-04-19 04:33:15 UTC</td>\n",
-       "      <td>0.111429</td>\n",
-       "      <td>0.254735</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>1389</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2011-03-28 15:01:13 UTC</td>\n",
-       "      <td>2011-04-19 15:00:54 UTC</td>\n",
-       "      <td>0.438571</td>\n",
-       "      <td>0.254735</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>1389</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>2011-03-28 15:01:40 UTC</td>\n",
-       "      <td>2011-04-19 19:10:05 UTC</td>\n",
-       "      <td>0.140000</td>\n",
-       "      <td>0.261922</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>1389</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>2011-03-28 15:01:51 UTC</td>\n",
-       "      <td>2011-04-19 19:07:01 UTC</td>\n",
-       "      <td>0.377143</td>\n",
-       "      <td>0.262720</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5</td>\n",
        "      <td>3079</td>\n",
-       "      <td>0.5</td>\n",
+       "      <td>0.50</td>\n",
        "      <td>1.0</td>\n",
        "      <td>5.0</td>\n",
        "      <td>2011-03-28 15:21:26 UTC</td>\n",
        "      <td>2011-04-13 15:25:27 UTC</td>\n",
        "      <td>0.105714</td>\n",
        "      <td>0.313178</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>24</td>\n",
+       "      <td>3079</td>\n",
+       "      <td>1.50</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>2011-03-29 15:39:11 UTC</td>\n",
+       "      <td>2011-04-13 15:26:01 UTC</td>\n",
+       "      <td>0.081429</td>\n",
+       "      <td>0.470795</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>74</th>\n",
+       "      <td>82</td>\n",
+       "      <td>3079</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>2011-04-13 15:42:30 UTC</td>\n",
+       "      <td>2011-04-13 15:42:30 UTC</td>\n",
+       "      <td>0.101429</td>\n",
+       "      <td>0.323457</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75</th>\n",
+       "      <td>83</td>\n",
+       "      <td>3079</td>\n",
+       "      <td>2.00</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>76.0</td>\n",
+       "      <td>2011-04-13 15:43:23 UTC</td>\n",
+       "      <td>2011-04-13 15:43:23 UTC</td>\n",
+       "      <td>0.084286</td>\n",
+       "      <td>0.481759</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>135</th>\n",
+       "      <td>145</td>\n",
+       "      <td>1291</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>133.0</td>\n",
+       "      <td>2011-04-14 21:33:56 UTC</td>\n",
+       "      <td>2011-04-14 21:33:56 UTC</td>\n",
+       "      <td>0.107143</td>\n",
+       "      <td>0.742283</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -219,107 +219,109 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1332721</th>\n",
-       "      <td>1385902</td>\n",
-       "      <td>52093</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>837.0</td>\n",
-       "      <td>2017-06-26 21:35:08 UTC</td>\n",
-       "      <td>2017-06-26 21:35:08 UTC</td>\n",
-       "      <td>0.200000</td>\n",
-       "      <td>0.753724</td>\n",
+       "      <th>1332548</th>\n",
+       "      <td>1385729</td>\n",
+       "      <td>72293</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>380790.0</td>\n",
+       "      <td>2017-06-09 20:38:44 UTC</td>\n",
+       "      <td>2017-06-09 20:38:44 UTC</td>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>0.070508</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1332722</th>\n",
-       "      <td>1385903</td>\n",
-       "      <td>52093</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1158.0</td>\n",
-       "      <td>2017-06-26 21:35:20 UTC</td>\n",
-       "      <td>2017-06-26 21:35:20 UTC</td>\n",
-       "      <td>0.237333</td>\n",
-       "      <td>0.753724</td>\n",
+       "      <th>1332584</th>\n",
+       "      <td>1385765</td>\n",
+       "      <td>72293</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>441592.0</td>\n",
+       "      <td>2017-06-09 20:47:19 UTC</td>\n",
+       "      <td>2017-06-09 20:47:19 UTC</td>\n",
+       "      <td>0.049333</td>\n",
+       "      <td>0.258225</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1332723</th>\n",
-       "      <td>1385904</td>\n",
-       "      <td>52093</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>375011.0</td>\n",
-       "      <td>2017-06-26 21:35:34 UTC</td>\n",
-       "      <td>2017-06-26 21:35:34 UTC</td>\n",
-       "      <td>0.284000</td>\n",
-       "      <td>0.759706</td>\n",
+       "      <th>1332715</th>\n",
+       "      <td>1385896</td>\n",
+       "      <td>72293</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>776.0</td>\n",
+       "      <td>2017-06-09 21:20:03 UTC</td>\n",
+       "      <td>2017-06-09 21:20:03 UTC</td>\n",
+       "      <td>0.166667</td>\n",
+       "      <td>0.887304</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1332724</th>\n",
-       "      <td>1385905</td>\n",
-       "      <td>52093</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>373447.0</td>\n",
-       "      <td>2017-06-26 21:35:46 UTC</td>\n",
-       "      <td>2017-06-26 21:35:46 UTC</td>\n",
-       "      <td>0.350667</td>\n",
-       "      <td>0.759706</td>\n",
+       "      <th>1332716</th>\n",
+       "      <td>1385897</td>\n",
+       "      <td>72293</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>777.0</td>\n",
+       "      <td>2017-06-09 21:20:16 UTC</td>\n",
+       "      <td>2017-06-09 21:20:16 UTC</td>\n",
+       "      <td>0.597333</td>\n",
+       "      <td>0.890051</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1332725</th>\n",
-       "      <td>1385906</td>\n",
-       "      <td>74655</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>187845.0</td>\n",
-       "      <td>2017-06-30 13:56:36 UTC</td>\n",
-       "      <td>2017-06-30 13:56:36 UTC</td>\n",
-       "      <td>0.242667</td>\n",
-       "      <td>0.686024</td>\n",
+       "      <th>1332717</th>\n",
+       "      <td>1385898</td>\n",
+       "      <td>72293</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>423510.0</td>\n",
+       "      <td>2017-06-09 21:20:37 UTC</td>\n",
+       "      <td>2017-06-09 21:20:37 UTC</td>\n",
+       "      <td>0.249333</td>\n",
+       "      <td>0.903787</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1332726 rows × 9 columns</p>\n",
+       "<p>91847 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "              id  menu_page_id  price  high_price   dish_id  \\\n",
-       "0              1          1389    0.4         NaN       1.0   \n",
-       "1              2          1389    0.6         NaN       2.0   \n",
-       "2              3          1389    0.4         NaN       3.0   \n",
-       "3              4          1389    0.5         NaN       4.0   \n",
-       "4              5          3079    0.5         1.0       5.0   \n",
+       "4              5          3079   0.50         1.0       5.0   \n",
+       "21            24          3079   1.50         3.0      23.0   \n",
+       "74            82          3079   0.75         1.5      75.0   \n",
+       "75            83          3079   2.00         4.0      76.0   \n",
+       "135          145          1291   0.75         1.5     133.0   \n",
        "...          ...           ...    ...         ...       ...   \n",
-       "1332721  1385902         52093    NaN         NaN     837.0   \n",
-       "1332722  1385903         52093    NaN         NaN    1158.0   \n",
-       "1332723  1385904         52093    NaN         NaN  375011.0   \n",
-       "1332724  1385905         52093    NaN         NaN  373447.0   \n",
-       "1332725  1385906         74655    NaN         NaN  187845.0   \n",
+       "1332548  1385729         72293   0.10         1.0  380790.0   \n",
+       "1332584  1385765         72293   0.25         1.0  441592.0   \n",
+       "1332715  1385896         72293   0.15         0.4     776.0   \n",
+       "1332716  1385897         72293   0.25         0.4     777.0   \n",
+       "1332717  1385898         72293   0.25         0.4  423510.0   \n",
        "\n",
        "                      created_at               updated_at      xpos      ypos  \n",
-       "0        2011-03-28 15:00:44 UTC  2011-04-19 04:33:15 UTC  0.111429  0.254735  \n",
-       "1        2011-03-28 15:01:13 UTC  2011-04-19 15:00:54 UTC  0.438571  0.254735  \n",
-       "2        2011-03-28 15:01:40 UTC  2011-04-19 19:10:05 UTC  0.140000  0.261922  \n",
-       "3        2011-03-28 15:01:51 UTC  2011-04-19 19:07:01 UTC  0.377143  0.262720  \n",
        "4        2011-03-28 15:21:26 UTC  2011-04-13 15:25:27 UTC  0.105714  0.313178  \n",
+       "21       2011-03-29 15:39:11 UTC  2011-04-13 15:26:01 UTC  0.081429  0.470795  \n",
+       "74       2011-04-13 15:42:30 UTC  2011-04-13 15:42:30 UTC  0.101429  0.323457  \n",
+       "75       2011-04-13 15:43:23 UTC  2011-04-13 15:43:23 UTC  0.084286  0.481759  \n",
+       "135      2011-04-14 21:33:56 UTC  2011-04-14 21:33:56 UTC  0.107143  0.742283  \n",
        "...                          ...                      ...       ...       ...  \n",
-       "1332721  2017-06-26 21:35:08 UTC  2017-06-26 21:35:08 UTC  0.200000  0.753724  \n",
-       "1332722  2017-06-26 21:35:20 UTC  2017-06-26 21:35:20 UTC  0.237333  0.753724  \n",
-       "1332723  2017-06-26 21:35:34 UTC  2017-06-26 21:35:34 UTC  0.284000  0.759706  \n",
-       "1332724  2017-06-26 21:35:46 UTC  2017-06-26 21:35:46 UTC  0.350667  0.759706  \n",
-       "1332725  2017-06-30 13:56:36 UTC  2017-06-30 13:56:36 UTC  0.242667  0.686024  \n",
+       "1332548  2017-06-09 20:38:44 UTC  2017-06-09 20:38:44 UTC  0.333333  0.070508  \n",
+       "1332584  2017-06-09 20:47:19 UTC  2017-06-09 20:47:19 UTC  0.049333  0.258225  \n",
+       "1332715  2017-06-09 21:20:03 UTC  2017-06-09 21:20:03 UTC  0.166667  0.887304  \n",
+       "1332716  2017-06-09 21:20:16 UTC  2017-06-09 21:20:16 UTC  0.597333  0.890051  \n",
+       "1332717  2017-06-09 21:20:37 UTC  2017-06-09 21:20:37 UTC  0.249333  0.903787  \n",
        "\n",
-       "[1332726 rows x 9 columns]"
+       "[91847 rows x 9 columns]"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "menuitem = pd.read_csv(\"MenuItem.csv\")\n",
+    "menuitem.dropna(how='any',inplace=True)\n",
+    "menuitem.to_csv(\"MenuItem_stage1.csv\",index=False)\n",
     "menuitem"
    ]
   },
@@ -713,7 +715,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
